--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,6 @@
-/* Estilos Gerais */
 body {
     font-family: Arial, sans-serif;
-    background-color: #523722; /* Fundo marrom */
+    background-color: #523722; 
     color: #333;
     display: flex;
     flex-direction: column;
@@ -29,7 +28,6 @@ main {
     width: 100%;
 }
 
-/* Tabuleiro do Jogo */
 #game-board {
     display: grid;
     grid-template-rows: repeat(6, 1fr);
@@ -56,33 +54,32 @@ main {
     transition: transform 0.6s;
 }
 
-/* Estilos das Letras no Tabuleiro com borda branca */
+
 .tile.correct {
-    background-color: #538d4e; /* Verde */
+    background-color: #538d4e;
     border-color: #FFFFFF;
     color: #fff;
     transform: rotateX(360deg);
 }
 
 .tile.present {
-    background-color: #b59f3b; /* Amarelo */
+    background-color: #b59f3b;
     border-color: #FFFFFF;
     color: #fff;
     transform: rotateX(360deg);
 }
 
 .tile.absent {
-    background-color: #121213; /* Fundo preto/escuro */
+    background-color: #121213; 
     border-color: #FFFFFF;
     color: #fff;
     transform: rotateX(360deg);
 }
 
-/* Estilos do Teclado Virtual */
+
 #keyboard {
     display: flex;
     flex-direction: row;
-    /* ALTERAÇÃO: Diminuído o espaço entre o teclado de letras e os botões de ação */
     gap: 5px;
     width: 100%;
     max-width: 620px;
@@ -146,7 +143,6 @@ main {
     background-color: #3a3a3c;
 }
 
-/* --- MEDIA QUERIES PARA RESPONSIVIDADE --- */
 @media (max-width: 600px) {
     header h1 {
         font-size: 1.8rem;
